コンテンツを修正

--- a//20241206141437.md
+++ b//20241206141437.md
@@ -50,10 +50,9 @@ DELIMITER ;
 カーソル処理中にループが予期せず終了する主な原因は、`NOT FOUND`ハンドラが`FETCH`文以外の操作によってもトリガーされる点にあります。具体的には、以下のような状況が問題を引き起こします：
 
 - ループ内で`SELECT INTO`文などを使用し、その操作が結果を返さなかった場合。
--`NOT FOUND`ハンドラがスコープ内のすべての操作に適用されている場合。
+- `NOT FOUND`ハンドラがスコープ内のすべての操作に適用されている場合。
 
-上記の例では簡略化していますが、フェッチしたデータに対する処理にて`NOT FOUND`が発生した場合に同現象が発生します。
-その場合、`NOT FOUND`ハンドラによって`done`フラグが`1`に設定され、ループが終了してしまいます。
+上記の例では簡略化していますが、フェッチしたデータに対する処理にて`NOT FOUND`が発生した場合に同現象が発生します。その場合、`NOT FOUND`ハンドラによって`done`フラグが`1`に設定され、ループが終了してしまいます。
 
 ## 解決策
 
