--- a//20241220170650.md
+++ b//20241220170650.md
@@ -6,7 +6,7 @@
 
 本記事では、Windows-31J特有の文字をShift_JISに変換し、最終的にShift_JISとして安全にエンコード・デコードできるかを判定するPythonコードを実装します。
 
-## 1. 背景と課題
+## 背景と課題
 
 システム間でデータをやり取りする際、文字コードの不一致が原因で予期せぬエラーが発生することがあります。
 
@@ -15,7 +15,7 @@
 
 問題となるのは、Windows-31J特有の文字が含まれる場合、Shift_JISとして処理できないことです。特に、プログラムでエンコードエラーが発生する可能性があります。
 
-## 2. 文字コードの違い
+## 文字コードの違い
 
 以下は、Windows-31JとShift_JISの代表的な違いです。
 
@@ -24,7 +24,7 @@
 | 波ダッシュ | `\uff5e`              | `\u301c`            |
 | 﨑         | 定義あり              | 定義なし            |
 
-## 3. 判定ロジックの要件
+## 判定ロジックの要件
 
 - **Windows-31J特有の文字をShift_JIS互換の文字に変換する**
 - **変換後の文字列がShift_JISとしてエンコード・デコード可能かを判定する**
@@ -32,7 +32,7 @@
 
 これを満たすロジックをPythonで実装します。
 
-## 4. 実装例
+## 実装例
 
 以下は、Windows-31Jの特有文字をShift_JIS互換に変換し、Shift_JISとして処理可能かを判定するPythonコードです。
 
@@ -81,7 +81,7 @@ if __name__ == "__main__":
         print(f"{case['description']}: {'OK' if result else 'NG'}")
 ```
 
-## 5. テストケースで確認
+## テストケースで確認
 
 **Pythonのテスト結果**
 
@@ -91,6 +91,6 @@ if __name__ == "__main__":
 | `"山﨑"`       | Shift_JIS非互換の文字（﨑）         | NG    |
 | `"山崎"`       | 標準的なShift_JIS互換文字           | OK    |
 
-## 6. まとめ
+## まとめ
 
 Windows-31J特有の文字がShift_JISに変換可能かを安全に判定できるロジックを構築しました。
