コンテンツを修正

--- a//20250108170517.md
+++ b//20250108170517.md
@@ -43,8 +43,7 @@
 
 [include](%7F/20250108170517.20250108164326.md)
 
-3-3. Docker アカウントのサインイン画面が表示されますが、アカウントなしでも使
-用可能です。右上の「Skip」をクリックしてスキップできます。
+3-3. Docker アカウントのサインイン画面が表示されますが、アカウントなしでも使用可能です。右上の「Skip」をクリックしてスキップできます。
 
 [include](%7F/20250108170517.20250108164454.md)
 
@@ -62,11 +61,11 @@
 
 4-2. ターミナル（PowerShell やコマンドプロンプト）を開き、以下のコマンドを入力します：
 
-   ```
-   docker --version
-   ```
+```
+docker --version
+```
 
-   Docker のバージョン情報が表示されれば、インストールは成功です。
+Docker のバージョン情報が表示されれば、インストールは成功です。
 
 ## 参考資料
 
