コンテンツを修正

--- a//20250110170550.md
+++ b//20250110170550.md
@@ -308,7 +308,7 @@ mkdir -p tasks/templates/tasks
 </head>
 <body>
     <h1>Todo List</h1>
-    <a href="{%　url 'create_task' %}">新規タスク作成</a>
+    <a href="{％ url 'create_task' ％}">新規タスク作成</a>
     <ul>
         {% for task in tasks %}
             <li>
@@ -317,8 +317,8 @@ mkdir -p tasks/templates/tasks
                 <br>
                 {{ task.description }}
                 <br>
-                <a href="{%　url 'update_task' task.id %}">編集</a> /
-                <a href="{%　url 'delete_task' task.id %}">削除</a>
+                <a href="{％ url 'update_task' task.id ％}">編集</a> /
+                <a href="{％ url 'delete_task' task.id ％}">削除</a>
             </li>
             <hr>
         {% endfor %}
@@ -346,7 +346,7 @@ mkdir -p tasks/templates/tasks
 
         <button type="submit">作成</button>
     </form>
-    <a href="{%　url 'task_list' %}">戻る</a>
+    <a href="{％ url 'task_list' ％}">戻る</a>
 </body>
 </html>
 ```
@@ -373,7 +373,7 @@ mkdir -p tasks/templates/tasks
 
         <button type="submit">更新</button>
     </form>
-    <a href="{%　url 'task_list' %}">戻る</a>
+    <a href="{％ url 'task_list' ％}">戻る</a>
 </body>
 </html>
 ```
