コンテンツを修正

--- a//20250110170550.md
+++ b//20250110170550.md
@@ -299,7 +299,7 @@ mkdir -p tasks/templates/tasks
 ```
 
 7-3-1. `tasks/templates/tasks/task_list.html`  
-※下記文中の全角「％」を半角「%」に置換してください。
+※下記文中の全角「％」を半角「%」に置換してください。（全角記号でJekyllのLiquid構文を回避）
 ```
 <!DOCTYPE html>
 <html lang="ja">
@@ -329,7 +329,7 @@ mkdir -p tasks/templates/tasks
 ```
 
 7-3-2. `tasks/templates/tasks/create_task.html`  
-※下記文中の全角「％」を半角「%」に置換してください。
+※下記文中の全角「％」を半角「%」に置換してください。（全角記号でJekyllのLiquid構文を回避）
 ```
 <!DOCTYPE html>
 <html lang="ja">
@@ -354,7 +354,7 @@ mkdir -p tasks/templates/tasks
 ```
 
 7-3-3. `tasks/templates/tasks/update_task.html`  
-※下記文中の全角「％」を半角「%」に置換してください。
+※下記文中の全角「％」を半角「%」に置換してください。（全角記号でJekyllのLiquid構文を回避）
 ```
 <!DOCTYPE html>
 <html lang="ja">
