--- a//20250119184259.md
+++ b//20250119184259.md
@@ -8,9 +8,9 @@ GitHub Pages や GitHub Actions を利用して Jekyll ビルドを行う際、*
 ## 背景
 
 Markdown (`.md`) ファイルは Jekyll によって自動的に Liquid テンプレートとして解釈されます。  
-Django のようなテンプレートも `{% ... %}` のような構文を使用しますが、Jekyll/Liquid はこれらを「Liquid のタグ」として扱ってしまうため、未知のタグと見なされるとエラーを出します。  
+Django のようなテンプレートも `{％ ... ％}` のような構文を使用しますが、Jekyll/Liquid はこれらを「Liquid のタグ」として扱ってしまうため、未知のタグと見なされるとエラーを出します。  
 
-GitHub Pages や GitHub Actions 上で `{% url ... %}` が記述されたファイルをビルドした結果、以下のようなエラーが発生する例があります。
+GitHub Pages や GitHub Actions 上で `{％ url ... ％}` が記述されたファイルをビルドした結果、以下のようなエラーが発生する例があります。
 
 ```
 Liquid Exception: Liquid syntax error (line XXX): Unknown tag 'url'
@@ -19,15 +19,15 @@ Liquid Exception: Liquid syntax error (line XXX): Unknown tag 'url'
 ## 問題の原因
 
 1. **Liquid 構文の衝突**  
-   Jekyll が拡張子 `.md` や `.html` のファイルを自動的にパースし、`{% ... %}` を Liquid 構文と認識。これに対し `url` というタグが Liquid 上に存在しないため、「Unknown tag 'url'」としてエラーが発生します。
+   Jekyll が拡張子 `.md` や `.html` のファイルを自動的にパースし、`{％ ... ％}` を Liquid 構文と認識。これに対し `url` というタグが Liquid 上に存在しないため、「Unknown tag 'url'」としてエラーが発生します。
 2. **コードブロックやエスケープが行われていない**  
-   Django テンプレートの `{% url ... %}` などをそのまま書くと Liquid に解釈され、衝突を引き起こします。
+   Django テンプレートの `{％ url ... ％}` などをそのまま書くと Liquid に解釈され、衝突を引き起こします。
 
 ## 対処方法
 
 ### 1. 全角記号に置き換える（応急処置）
 
-- Liquid は半角の `{% ... %}` をテンプレートタグとして扱うが、全角文字 `{％ ... ％}` は構文外と判断し、エラーを回避できる。  
+- Liquid は半角の `{％ ... ％}` をテンプレートタグとして扱うが、全角文字は構文外と判断し、エラーを回避できる。  
 - **注意点**: Django テンプレートとしては動作しないため、実際に Django で使うときは元に戻す必要があります。
 
 ### 2. ビルド対象から除外する
@@ -37,7 +37,7 @@ Liquid Exception: Liquid syntax error (line XXX): Unknown tag 'url'
 
 ## まとめ
 
-- Django テンプレート構文 `{% ... %}` が Jekyll/Liquid に衝突し、未知のタグと認識される。  
+- Django テンプレート構文 `{％ ... ％}` が Jekyll/Liquid に衝突し、未知のタグと認識される。  
 - 対処方法として、全角記号に置き換えるなどの方法を検討する必要がある。
 - 注意点として、全角変換やエスケープは Liquid エラーを回避する方法であって、Django で動かす場合は元に戻す必要がある。  
 
