コンテンツを修正

--- a//20251025140457.md
+++ b//20251025140457.md
@@ -16,7 +16,7 @@
 |Node.js|22.18.0（nvm 管理）|
 |Wiki.js|v2.5.308|
 |DB|SQLite（`node-sqlite3` ビルド版）|
-|インストール先|`/home/administrator/wikijs`|
+|インストール先|`/home/＜ユーザー名＞/wikijs`|
 |サービス管理|systemd|
 |アクセス方法|LAN内のブラウザから `http://<PiのIP>:3000`|
 
