コンテンツを修正

--- a//20251025140457.md
+++ b//20251025140457.md
@@ -126,12 +126,12 @@ After=network.target
 
 [Service]
 Type=simple
-User=administrator
-WorkingDirectory=/home/administrator/wikijs
+User=＜ユーザー名＞
+WorkingDirectory=/home/＜ユーザー名＞/wikijs
 Environment=NODE_ENV=production
-Environment=PATH=/home/administrator/.nvm/versions/node/v22.18.0/bin:/usr/local/bin:/usr/bin:/bin
+Environment=PATH=/home/＜ユーザー名＞/.nvm/versions/node/v22.18.0/bin:/usr/local/bin:/usr/bin:/bin
 Environment=TZ=Asia/Tokyo
-ExecStart=/home/administrator/.nvm/versions/node/v22.18.0/bin/node server
+ExecStart=/home/＜ユーザー名＞/.nvm/versions/node/v22.18.0/bin/node server
 Restart=always
 RestartSec=10
 
