コンテンツを修正

--- a//20251025140457.md
+++ b//20251025140457.md
@@ -16,7 +16,7 @@
 |Node.js|22.18.0（nvm 管理）|
 |Wiki.js|v2.5.308|
 |DB|SQLite（`node-sqlite3` ビルド版）|
-|インストール先|`/home/＜ユーザー名＞/wikijs`|
+|インストール先|`/home/<ユーザー名>/wikijs`|
 |サービス管理|systemd|
 |アクセス方法|LAN内のブラウザから `http://<PiのIP>:3000`|
 
@@ -126,12 +126,12 @@ After=network.target
 
 [Service]
 Type=simple
-User=＜ユーザー名＞
-WorkingDirectory=/home/＜ユーザー名＞/wikijs
+User=<ユーザー名>
+WorkingDirectory=/home/<ユーザー名>/wikijs
 Environment=NODE_ENV=production
-Environment=PATH=/home/＜ユーザー名＞/.nvm/versions/node/v22.18.0/bin:/usr/local/bin:/usr/bin:/bin
+Environment=PATH=/home/<ユーザー名>/.nvm/versions/node/v22.18.0/bin:/usr/local/bin:/usr/bin:/bin
 Environment=TZ=Asia/Tokyo
-ExecStart=/home/＜ユーザー名＞/.nvm/versions/node/v22.18.0/bin/node server
+ExecStart=/home/<ユーザー名>/.nvm/versions/node/v22.18.0/bin/node server
 Restart=always
 RestartSec=10
 
